Fix for 61964240, added a clear for smaller screens to stop the button collapsing

--- a/sites/all/themes/wto-stdf/sass/layouts/responsive-sidebars.scss
+++ b/sites/all/themes/wto-stdf/sass/layouts/responsive-sidebars.scss
@@ -105,7 +105,7 @@ $zen-auto-include-item-base: true;
     .view-nodequeue-upcoming-events{
       .view-footer{
         p{
-          float:right;
+          float: right;
         }
       }  
     }
@@ -124,10 +124,10 @@ $zen-auto-include-item-base: true;
 
 @media all and (max-width: 650px) {
   #block-views-front-carousel-block .views-field-body {
-    display:none;
+    display: none;
   }
   #block-views-front-carousel-block .views-field-body-1 {
-    display:block;
+    display: block;
   }
     #block-views-eebb22e852a8f93e943e8c7a212a3c68{
     .view-nodequeue-thematic-activities {	
@@ -141,6 +141,7 @@ $zen-auto-include-item-base: true;
     }
   }
 }
+#block-user-login { clear: both; }
   
 }
 
@@ -157,6 +158,7 @@ $zen-auto-include-item-base: true;
   #block-views-front-carousel-block .views-field-body-1 {
     display:none;
   }
+  #block-user-login { clear: both; }
 
 }
 
